# utkonOS

./: .gitignore  README.md  grub.cfg  run.sh
v1/: .gitignore  kernel.c  setup.sh
v2/: Cargo.toml  Makefile  README.md  setup.sh
v2/.cargo/: config
v2/.iso/: grub.cfg
v2/src/: main.rs
