[package]
name = "utkon_os"
version = "0.1.0"
edition = "2018"
authors = ["Sergei Cherkesov <go.for.broke1006@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
x86_64 = { version = "0.14.7", default-features = false, features = ["instructions", "inline_asm"] }


# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
